result/2924%_cal_coverage/53%original%FilterByPrefix%filterByPrefix%d1/1/temp/compile_error.txt
/home/minbao/PycharmProject/ChatUniTest-main/result/scope_test%20231224102924%/53%original%FilterByPrefix%filterByPrefix%d1/1/temp/FilterByPrefix_53_1Test.java:2: error: class, interface, or enum expected
package test;
^
1 error
